# VolumeRendering

./: .gitignore  .gitmodules  README.md
App/: CMakeLists.txt
App/shaders/: BasicVolLightApp.wgsl  BasicVolumeApp.wgsl  DicomInfoApp.wgsl  MultiCTRTApp.wgsl  MutliCTRTIllustrative.wgsl  TFCalibrationApp.wgsl  ThreeFilesApp.wgsl  VolumeMaskApp.wgsl  fullscreen.wgsl  rayCoords.wgsl  simple.wgsl
App/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  ImGuiLayer.cpp  ImGuiLayer.h  Main.cpp  Shader.h
App/src/dicom/: DatImpl.cpp  DatImpl.h  DcmImpl.cpp  DcmImpl.h  FileDataType.h  FileReader.cpp  FileReader.h  README.md  VolumeFile.cpp  VolumeFile.h
App/src/file/: FileDataType.h  FileReader.cpp  FileReader.h  FileSystem.cpp  FileSystem.h  VolumeFile.cpp  VolumeFile.h
App/src/file/dat/: DatReader.cpp  DatReader.h
App/src/file/dicom/: DicomParams.h  DicomParseUtil.h  DicomParseUtil.inl  DicomReader.cpp  DicomReader.h  IDicomFile.h  StructVisitor.h  StructureFileDcm.cpp  StructureFileDcm.h  VolumeFileDcm.cpp  VolumeFileDcm.h
App/src/miniapps/: BasicVolLightApp.cpp  BasicVolumeApp.cpp  DicomInfoApp.cpp  MiniApp.h  MutliCTRTApp.cpp  TFCalibrationApp.cpp  ThreeFilesApp.cpp  VolumeMaskApp.cpp
App/src/miniapps/include/: BasicVolLightApp.h  BasicVolumeApp.h  DicomInfoApp.h  MiniApp.h  MutliCTRTApp.h  TFCalibrationApp.h  ThreeFilesApp.h  VolumeMaskApp.h
App/src/renderer/: BindGroup.cpp  BindGroup.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderPipeline.cpp  RenderPipeline.h  Sampler.cpp  Sampler.h  StorageBuffer.cpp  StorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
App/src/tf/: ColorTf.cpp  ColorTf.h  GradientCreator.cpp  GradientCreator.h  LinearInterpolation.h  OpacityTf.cpp  OpacityTf.h  TfUtils.cpp  TfUtils.h  TransferFunction.cpp  TransferFunction.h
WebgpuLib/: CMakeLists.txt
WebgpuLib/src/Base/: Event.h  Filesystem.cpp  Filesystem.h  GraphicsContext.cpp  GraphicsContext.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Main.cpp  Timer.h  Timestep.h  Utils.h  Window.h
WebgpuLib/src/Platform/Native/: NativeFilesystem.cpp  NativeGraphicsContext.cpp  NativeUtils.cpp  NativeWindow.cpp
